clib_packages/xforms/package/include/xforms_flimage.h


#define FL_RGB2GRAY( r, g, b )  \
    ( ( unsigned int )( ( 78 * ( r ) + 150 * ( g ) + 28 * ( b ) ) >> 8 ) )
typedef enum {
    FL_IMAGE_NONE,
    FL_IMAGE_MONO   =    1,     
    FL_IMAGE_GRAY   =    2,     
    FL_IMAGE_CI     =    4,     
    FL_IMAGE_RGB    =    8,     
    FL_IMAGE_PACKED =   16,     
    FL_IMAGE_GRAY16 =   32,     
    FL_IMAGE_RGB16  =   64,     
    FL_IMAGE_FLEX   = 1023,     
    FLIMAGE_NONE    = FL_IMAGE_NONE,
    FLIMAGE_MONO    = FL_IMAGE_MONO,
    FLIMAGE_GRAY    = FL_IMAGE_GRAY,
    FLIMAGE_CI      = FL_IMAGE_CI,
    FLIMAGE_RGB     = FL_IMAGE_RGB,
    FLIMAGE_PACKED  = FL_IMAGE_PACKED,
    FLIMAGE_GRAY16  = FL_IMAGE_GRAY16,
    FLIMAGE_RGB16   = FL_IMAGE_RGB16,
    FLIMAGE_FLEX    = FL_IMAGE_FLEX
}blablabla;
#define FL_PCMAX          ( ( 1 << FL_PCBITS ) - 1 )
#define FL_PCCLAMP( a )   ( ( a ) > ( FL_PCMAX ) ?    \
                            ( FL_PCMAX ) : ( ( a ) < 0 ? 0 : ( a ) ) )
#define FL_RMASK          0x000000ff
#define FL_RSHIFT         0
#define FL_GSHIFT         8
#define FL_BSHIFT         16
#define FL_ASHIFT         24
#define FL_GETR( packed ) (   ( packed )                & FL_RMASK )
#define FL_GETG( packed ) ( ( ( packed ) >> FL_GSHIFT ) & FL_PCMAX )
#define FL_GETB( packed ) ( ( ( packed ) >> FL_BSHIFT ) & FL_PCMAX )
#define FL_GETA( packed ) ( ( ( packed ) >> FL_ASHIFT ) & FL_PCMAX )
#define FL_PACK3( r, g, b )   \
    ( ( ( r ) << FL_RSHIFT ) | ( ( g ) << FL_GSHIFT ) | ( ( b ) << FL_BSHIFT ) )
#define FL_PACK4( r, g, b, a)  \
    ( FL_PACK3( r, g, b ) | ( ( a ) << FL_ASHIFT ) )
#define FL_IsRGB( im )    ( ( im )->type == FL_IMAGE_RGB )
#define FL_IsPacked( im ) ( ( im )->type == FL_IMAGE_PACKED )
typedef enum
{
    FLIMAGE_AUTOCOLOR = 0x7fffffff,
    FLIMAGE_BADCOLOR  = FLIMAGE_AUTOCOLOR
}blablabla;
typedef Window FL_WINDOW;   
typedef struct flimage_marker_ {
    const char   * name;      
    int            w,         
                   h ;
    int            x,         
                   y;
    unsigned int   color;     
    unsigned int   bcolor;    
    int            angle;     
    int            fill;
    int            thickness; 
    int            style;     
    void       * display;
    void       * gc;
    FL_WINDOW    win;
    const char * psdraw;
} FLIMAGE_MARKER;
typedef struct flimage_ {
    int               type;         
    int               w,
                      h;            
    void *            app_data;     
    void *            u_vdata;      
    long              u_ldata;      
    unsigned char  ** red;
    unsigned char  ** green;
    unsigned char  ** blue;
    unsigned char  ** alpha;
    unsigned char  ** rgba[ 4 ];    
    unsigned short ** ci;
    unsigned short ** gray;
    FL_PACKED4 **     packed;
    unsigned short ** red16;          
    unsigned short ** green16;        
    unsigned short ** blue16;         
    unsigned short ** alpha16;        
    unsigned char  ** ci8;            
    int             * red_lut;        
    int             * green_lut;      
    int             * blue_lut;       
    int             * alpha_lut;      
    int             * lut[ 4 ];       
    int               map_len;        
    int               colors;         
    int               gray_maxval;    
    int               ci_maxval;      
    int               rgb_maxval;     
    int               level,
                      wwidth;
    unsigned short  * wlut;           
    int               wlut_len;
    int               app_background; 
    char            * comments;
    int               comments_len;
    int               available_type;
    struct flimage_ * next;
    int               sx,             
                      sy;
    int               sw,             
                      sh;
    int               wx,             
                      wy;
    int modified;
    int               ( * display )( struct flimage_ *, FL_WINDOW );
    int               double_buffer;
    int               sxd,
                      syd,
                      swd,
                      shd;
    int               wxd,
                      wyd;
    const char      * fmt_name;       
    FLIMAGE_TEXT    * text;
    int               ntext,
                      max_text;
    int               dont_display_text;
    void              ( * display_text )( struct flimage_ * );
    void              ( * free_text )( struct flimage_ * );
    FLIMAGE_MARKER  * marker;
    int               nmarkers,
                      max_markers;
    int               dont_display_marker;
    void              ( * display_markers )( struct flimage_ * );
    void              ( * free_markers )( struct flimage_ * );
    double            pmin,           
                      pmax;
    double            poffset;
    double            pscale;
    double            xdist_offset;
    double            xdist_scale;
    double            ydist_offset;
    double            ydist_scale;
    char            * infile;
    char            * outfile;
    long              foffset;
    int               original_type;
    int               ( * pre_write )( struct flimage_ * );
    int               ( * post_write )( struct flimage_ * );
    int               subx,           
                      suby;
    int               subw,           
                      subh;
    int               sub_shape;      
    unsigned int      fill_color;     
    int               force_convert;
    int             * llut[ 3 ];      
    int               llut_len;
    unsigned int    * hist[ 4 ];
    int               total,
                      completed;
    int               ( * visual_cue )( struct flimage_*,
                                        const char * );
    void              ( * error_message )( struct flimage_*,
                                           const char * );
    int               error_code;     
    int               display_type;   
    unsigned short ** pixels;
    void            * image_spec;     
    void            * xdisplay;       
    int               tran_rgb;       
    int               tran_index;     
    int               matr,
                      matc;
    int               more;
    int               current_frame;
    int               total_frames;
    int               ( * next_frame )( struct flimage_ * );
    int               ( * prev_frame )( struct flimage_ * );
    int               ( * random_frame )( struct flimage_ *, int );
    int               ( * rewind_frame )( struct flimage_ * );
    void              ( * cleanup )( struct flimage_ * );
    int               stop_looping;
    FILE            * fpin;
    FILE            * fpout;
    void            * image_io;
    void            * io_spec;        
    int               spec_size;
    int               depth;          
    int               vclass;
    void            * visual;
    unsigned long     xcolormap;
    FL_RGB2PIXEL      rgb2p;
    void            * ximage;
    FL_WINDOW         win;
    void            * gc;
    int               sdepth;         
    void            * textgc;
    void            * markergc;
    void            * extra_io_info;
    unsigned long     pixmap;
    int               pixmap_w,
                      pixmap_h,
                      pixmap_depth;
    int               isPixmap;
    FLIMAGESETUP      setup;
    char            * info;
} FL_IMAGE;
typedef enum {
   FLIMAGE_ERR_NONE = 0,
   FLIMAGE_ERR_ALLOC = -50,     
   FLIMAGE_ERR_INVALID,         
   FLIMAGE_ERR_ARGUMENT,        
   FLIMAGE_ERR_FILE,            
   FLIMAGE_ERR_INTERNAL,        
   FLIMAGE_ERR_UNKNOWN
}blablabla;
extern int flimage_define_marker( const char *,
									 void ( * )( FLIMAGE_MARKER * ),
									 const char * );
typedef enum
{
    FLIMAGE_WRITABLE = FL_WRITE,
    FLIMAGE_READABLE = FL_READ
}blablabla;
typedef enum {
   FLIMAGE_NOSUBPIXEL =  0,     
   FLIMAGE_SUBPIXEL   =  1,     
   FLIMAGE_CENTER     =  2,     
   FLIMAGE_RIGHT      =  8,     
   FLIMAGE_ASPECT     = 32,     
   FLIMAGE_NOCENTER   = FL_ALIGN_LEFT_TOP
}blablabla;
extern int flimage_convolve( FL_IMAGE *,
								int **,
								int,
								int );
extern int flimage_convolvea( FL_IMAGE *,
								 int *,
								 int,
								 int );
extern int flimage_tint( FL_IMAGE *,
							unsigned int,
							double
        );
extern int flimage_rotate( FL_IMAGE *,
							  int,
							  int );
extern int flimage_flip( FL_IMAGE *,
							int );
extern int flimage_scale( FL_IMAGE *,
							 int,
							 int,
							 int );
extern int flimage_warp( FL_IMAGE *,
							float *[ 2 ],
							int,
							int,
							int );
extern int flimage_autocrop( FL_IMAGE *,
								unsigned int );
extern int flimage_get_autocrop( FL_IMAGE *,
									unsigned int,
									int *,
									int *,
									int *,
									int * );
extern int flimage_crop( FL_IMAGE *,
							int,
							int,
							int,
							int );
extern int flimage_replace_pixel( FL_IMAGE *,
									 unsigned int,
									 unsigned int );
extern int flimage_transform_pixels( FL_IMAGE *,
										int *,
										int *,
										int * );
extern int flimage_windowlevel( FL_IMAGE *,
								   int,
								   int );
extern int flimage_enhance( FL_IMAGE *,
							   int );
extern int flimage_from_pixmap( FL_IMAGE *,
								   Pixmap );
extern Pixmap flimage_to_pixmap( FL_IMAGE *, 
									FL_WINDOW );
extern FL_IMAGE * flimage_dup( FL_IMAGE * );
extern int fl_object_ps_dump( FL_OBJECT *,
								 const char * );
extern void flimage_add_comments( FL_IMAGE *,
									 const char *,
									 int );
extern unsigned long flimage_color_to_pixel( FL_IMAGE *,
												int,
												int,
												int,
												int * );
extern FL_IMAGE * flimage_combine( FL_IMAGE *,
									  FL_IMAGE *,
									  double );
extern int flimage_define_marker( const char *,
									 void ( * )( FLIMAGE_MARKER * ),
									 const char * );
extern void flimage_display_markers( FL_IMAGE * );
extern FL_IMAGE *flimage_dup_( FL_IMAGE *, 
								  int );
extern void flimage_enable_bmp( void );
extern void flimage_enable_fits( void );
extern void flimage_enable_genesis( void );
extern void flimage_enable_gif( void );
extern void flimage_enable_gzip( void );
extern void flimage_enable_jpeg( void );
extern void flimage_enable_png( void );
extern void flimage_enable_ps( void );
extern void flimage_enable_sgi( void );
extern void flimage_enable_tiff( void );
extern void flimage_enable_xbm( void );
extern void flimage_enable_xpm( void );
extern void flimage_enable_xwd( void );
extern void flimage_free_ci( FL_IMAGE * );
extern void flimage_free_gray( FL_IMAGE * );
extern void flimage_free_linearlut( FL_IMAGE * );
extern void flimage_free_rgb( FL_IMAGE * );
extern void flimage_freemem( FL_IMAGE * );
extern int flimage_get_closest_color_from_map( FL_IMAGE *,
												  unsigned int );
extern int flimage_get_linearlut( FL_IMAGE * );
extern void flimage_invalidate_pixels( FL_IMAGE * );
extern FL_IMAGE *flimage_open( const char * );
extern int flimage_read_annotation( FL_IMAGE * );
extern void flimage_replace_image( FL_IMAGE *,
									  int,
									  int,
									  void *,
									  void *,
									  void * );
extern int flimage_swapbuffer( FL_IMAGE * );
extern int flimage_to_ximage( FL_IMAGE *,
								 FL_WINDOW,
								 XWindowAttributes * );
extern int flimage_write_annotation( FL_IMAGE * );
extern void flps_apply_gamma( float );
extern void flps_arc( int,
						 int,
						 int,
						 int,
						 int,
						 int,
						 FL_COLOR );
extern void flps_circ( int,
						  int,
						  int,
						  int,
						  FL_COLOR );
extern void flps_color( FL_COLOR col );
extern void flps_draw_box( int,
							  int,
							  int,
							  int,
							  int,
							  FL_COLOR,
							  int );
extern void flps_draw_checkbox( int,
								   int,
								   int,
								   int,
								   int,
								   FL_COLOR,
								   int );
extern void flps_draw_frame( int,
								int,
								int,
								int,
								int,
								FL_COLOR,
								int );
extern int flps_draw_symbol( const char *,
								int,
								int,
								int,
								int,
								FL_COLOR );
extern void flps_draw_tbox( int,
							   int,
							   int,
							   int,
							   int,
							   FL_COLOR,
							   int );
extern void flps_draw_text( int,
							   int,
							   int,
							   int,
							   int,
							   FL_COLOR,
							   int,
							   int,
							   const char * );
extern void flps_draw_text_beside( int,
									  int,
									  int,
									  int,
									  int,
									  FL_COLOR,
									  int,
									  int,
									  const char * );
extern void flps_emit_header( const char *,
								 int,
								 int,
								 int,
								 int,
								 int );
extern void flps_emit_prolog( void );
extern int flps_get_gray255( FL_COLOR );
extern int flps_get_linestyle( void );
extern int flps_get_linewidth( void );
extern FL_COLOR flps_get_namedcolor( const char * );
extern FLPS_CONTROL * flps_init( void );
extern void flps_invalidate_color_cache( void );
extern void flps_invalidate_font_cache( void );
extern void flps_invalidate_linewidth_cache( void );
extern void flps_invalidate_symbol_cache( void );
extern void flps_line( int,
						  int,
						  int,
						  int,
						  FL_COLOR );
extern void flps_lines( FL_POINT *,
						   int,
						   FL_COLOR );
extern void flps_linestyle( int );
extern void flps_linewidth( int );
extern void flps_log( const char * );
extern void flps_output( const char *,
							... );
extern void flps_oval( int,
						  int,
						  int,
						  int,
						  int,
						  FL_COLOR );
extern void flps_pieslice( int,
							  int,
							  int,
							  int,
							  int,
							  int,
							  int,
							  FL_COLOR );
extern void flps_poly( int,
						  FL_POINT *,
						  int,
						  FL_COLOR );
extern void flps_rectangle( int,
							   int,
							   int,
							   int,
							   int,
							   FL_COLOR );
extern void flps_reset_cache( void );
extern void flps_reset_linewidth( void );
extern void flps_restore_flps( void );
extern void flps_rgbcolor( int,
							  int,
							  int );
extern void flps_roundrectangle( int,
									int,
									int,
									int,
									int,
									FL_COLOR );
extern void flps_set_clipping( int,
								  int,
								  int,
								  int );
extern void flps_set_font( int,
							  int );
extern void flps_unset_clipping( void );