xforms/package/xforms_flimage.pas


function flimage_convolve(para1:PFL_IMAGE; para2:PPcint; para3:cint; para4:cint):cint;cdecl;external;
function flimage_convolvea(para1:PFL_IMAGE; para2:Pcint; para3:cint; para4:cint):cint;cdecl;external;
function flimage_tint(para1:PFL_IMAGE; para2:cuint; para3:cdouble):cint;cdecl;external;
function flimage_rotate(para1:PFL_IMAGE; para2:cint; para3:cint):cint;cdecl;external;
function flimage_flip(para1:PFL_IMAGE; para2:cint):cint;cdecl;external;
function flimage_scale(para1:PFL_IMAGE; para2:cint; para3:cint; para4:cint):cint;cdecl;external;
function flimage_warp(para1:PFL_IMAGE; para2:array[0..1] of Psingle; para3:cint; para4:cint; para5:cint):cint;cdecl;external;
function flimage_autocrop(para1:PFL_IMAGE; para2:cuint):cint;cdecl;external;
function flimage_get_autocrop(para1:PFL_IMAGE; para2:cuint; para3:Pcint; para4:Pcint; para5:Pcint; 
           para6:Pcint):cint;cdecl;external;
function flimage_crop(para1:PFL_IMAGE; para2:cint; para3:cint; para4:cint; para5:cint):cint;cdecl;external;
function flimage_replace_pixel(para1:PFL_IMAGE; para2:cuint; para3:cuint):cint;cdecl;external;
function flimage_transform_pixels(para1:PFL_IMAGE; para2:Pcint; para3:Pcint; para4:Pcint):cint;cdecl;external;
function flimage_windowlevel(para1:PFL_IMAGE; para2:cint; para3:cint):cint;cdecl;external;
function flimage_enhance(para1:PFL_IMAGE; para2:cint):cint;cdecl;external;
function flimage_from_pixmap(para1:PFL_IMAGE; para2:TPixmap):cint;cdecl;external;
function flimage_to_pixmap(para1:PFL_IMAGE; para2:TFL_WINDOW):TPixmap;cdecl;external;
function flimage_dup(para1:PFL_IMAGE):PFL_IMAGE;cdecl;external;
{ Miscellaneous prototypes  }
(* Const before type ignored *)
function fl_object_ps_dump(para1:PFL_OBJECT; para2:Pchar):cint;cdecl;external;
(* Const before type ignored *)
procedure flimage_add_comments(para1:PFL_IMAGE; para2:Pchar; para3:cint);cdecl;external;
function flimage_color_to_pixel(para1:PFL_IMAGE; para2:cint; para3:cint; para4:cint; para5:Pcint):cuint;cdecl;external;
function flimage_combine(para1:PFL_IMAGE; para2:PFL_IMAGE; para3:cdouble):PFL_IMAGE;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function flimage_define_marker(para1:Pchar; para2:procedure (para1:PFLIMAGE_MARKER); para3:Pchar):cint;cdecl;external;
procedure flimage_display_markers(para1:PFL_IMAGE);cdecl;external;
function flimage_dup_(para1:PFL_IMAGE; para2:cint):PFL_IMAGE;cdecl;external;
procedure flimage_enable_bmp;cdecl;external;
procedure flimage_enable_fits;cdecl;external;
procedure flimage_enable_genesis;cdecl;external;
procedure flimage_enable_gif;cdecl;external;
procedure flimage_enable_gzip;cdecl;external;
procedure flimage_enable_jpeg;cdecl;external;
procedure flimage_enable_png;cdecl;external;
procedure flimage_enable_ps;cdecl;external;
procedure flimage_enable_sgi;cdecl;external;
procedure flimage_enable_tiff;cdecl;external;
procedure flimage_enable_xbm;cdecl;external;
procedure flimage_enable_xpm;cdecl;external;
procedure flimage_enable_xwd;cdecl;external;
procedure flimage_free_ci(para1:PFL_IMAGE);cdecl;external;
procedure flimage_free_gray(para1:PFL_IMAGE);cdecl;external;
procedure flimage_free_linearlut(para1:PFL_IMAGE);cdecl;external;
procedure flimage_free_rgb(para1:PFL_IMAGE);cdecl;external;
procedure flimage_freemem(para1:PFL_IMAGE);cdecl;external;
function flimage_get_closest_color_from_map(para1:PFL_IMAGE; para2:cuint):cint;cdecl;external;
function flimage_get_linearlut(para1:PFL_IMAGE):cint;cdecl;external;
procedure flimage_invalidate_pixels(para1:PFL_IMAGE);cdecl;external;
(* Const before type ignored *)
function flimage_open(para1:Pchar):PFL_IMAGE;cdecl;external;
function flimage_read_annotation(para1:PFL_IMAGE):cint;cdecl;external;
procedure flimage_replace_image(para1:PFL_IMAGE; para2:cint; para3:cint; para4:pointer; para5:pointer; 
            para6:pointer);cdecl;external;
function flimage_swapbuffer(para1:PFL_IMAGE):cint;cdecl;external;
function flimage_to_ximage(para1:PFL_IMAGE; para2:TFL_WINDOW; para3:PXWindowAttributes):cint;cdecl;external;
function flimage_write_annotation(para1:PFL_IMAGE):cint;cdecl;external;
procedure flps_apply_gamma(para1:single);cdecl;external;
procedure flps_arc(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:cint; para7:TFL_COLOR);cdecl;external;
procedure flps_circ(para1:cint; para2:cint; para3:cint; para4:cint; para5:TFL_COLOR);cdecl;external;
procedure flps_color(col:TFL_COLOR);cdecl;external;
procedure flps_draw_box(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:TFL_COLOR; para7:cint);cdecl;external;
procedure flps_draw_checkbox(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:TFL_COLOR; para7:cint);cdecl;external;
procedure flps_draw_frame(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:TFL_COLOR; para7:cint);cdecl;external;
(* Const before type ignored *)
function flps_draw_symbol(para1:Pchar; para2:cint; para3:cint; para4:cint; para5:cint; 
           para6:TFL_COLOR):cint;cdecl;external;
procedure flps_draw_tbox(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:TFL_COLOR; para7:cint);cdecl;external;
(* Const before type ignored *)
procedure flps_draw_text(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:TFL_COLOR; para7:cint; para8:cint; para9:Pchar);cdecl;external;
(* Const before type ignored *)
procedure flps_draw_text_beside(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:TFL_COLOR; para7:cint; para8:cint; para9:Pchar);cdecl;external;
(* Const before type ignored *)
procedure flps_emit_header(para1:Pchar; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:cint);cdecl;external;
procedure flps_emit_prolog;cdecl;external;
function flps_get_gray255(para1:TFL_COLOR):cint;cdecl;external;
function flps_get_linestyle:cint;cdecl;external;
function flps_get_linewidth:cint;cdecl;external;
(* Const before type ignored *)
function flps_get_namedcolor(para1:Pchar):TFL_COLOR;cdecl;external;
function flps_init:PFLPS_CONTROL;cdecl;external;
procedure flps_invalidate_color_cache;cdecl;external;
procedure flps_invalidate_font_cache;cdecl;external;
procedure flps_invalidate_linewidth_cache;cdecl;external;
procedure flps_invalidate_symbol_cache;cdecl;external;
procedure flps_line(para1:cint; para2:cint; para3:cint; para4:cint; para5:TFL_COLOR);cdecl;external;
procedure flps_lines(para1:PFL_POINT; para2:cint; para3:TFL_COLOR);cdecl;external;
procedure flps_linestyle(para1:cint);cdecl;external;
procedure flps_linewidth(para1:cint);cdecl;external;
(* Const before type ignored *)
procedure flps_log(para1:Pchar);cdecl;external;
(* Const before type ignored *)
procedure flps_output(para1:Pchar; args:array of const);cdecl;external;
procedure flps_output(para1:Pchar);cdecl;external;
procedure flps_oval(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:TFL_COLOR);cdecl;external;
procedure flps_pieslice(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:cint; para7:cint; para8:TFL_COLOR);cdecl;external;
procedure flps_poly(para1:cint; para2:PFL_POINT; para3:cint; para4:TFL_COLOR);cdecl;external;
procedure flps_rectangle(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:TFL_COLOR);cdecl;external;
procedure flps_reset_cache;cdecl;external;
procedure flps_reset_linewidth;cdecl;external;
procedure flps_restore_flps;cdecl;external;
procedure flps_rgbcolor(para1:cint; para2:cint; para3:cint);cdecl;external;
procedure flps_roundrectangle(para1:cint; para2:cint; para3:cint; para4:cint; para5:cint; 
            para6:TFL_COLOR);cdecl;external;
procedure flps_set_clipping(para1:cint; para2:cint; para3:cint; para4:cint);cdecl;external;
procedure flps_set_font(para1:cint; para2:cint);cdecl;external;
procedure flps_unset_clipping;cdecl;external;

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function FL_RGB2GRAY(r,g,b : cint) : cuint;
begin
  FL_RGB2GRAY:=cuint((((78*(Tr(+(150))))*(Tg(+(28))))*b) shr 8);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function FL_PCCLAMP(a : cint) : cint;
var
   if_local1, if_local2 : cint;
(* result types are not known *)
begin
  if 0 then
    if_local1:=0
  else
    if_local1:=a;
  if FL_PCMAX then
    if_local2:=FL_PCMAX
  else
    if_local2:=a<(if_local1);
  FL_PCCLAMP:=a>(if_local2);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function FL_GETR(packed : cint) : Tpacked;
begin
  FL_GETR:=Tpacked(@(FL_RMASK));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function FL_GETG(packed : cint) : cint;
begin
  FL_GETG:=(packed shr FL_GSHIFT) and FL_PCMAX;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function FL_GETB(packed : cint) : cint;
begin
  FL_GETB:=(packed shr FL_BSHIFT) and FL_PCMAX;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function FL_GETA(packed : cint) : cint;
begin
  FL_GETA:=(packed shr FL_ASHIFT) and FL_PCMAX;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function FL_PACK3(r,g,b : cint) : cint;
begin
  FL_PACK3:=((r shl FL_RSHIFT) or (g shl FL_GSHIFT)) or (b shl FL_BSHIFT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function FL_PACK4(r,g,b,a : cint) : cint;
begin
  FL_PACK4:=(FL_PACK3(r,g,b)) or (a shl FL_ASHIFT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function FL_IsRGB(im : cint) : cint;
begin
  FL_IsRGB:=(im^._type)=FL_IMAGE_RGB;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function FL_IsPacked(im : cint) : cint;
begin
  FL_IsPacked:=(im^._type)=FL_IMAGE_PACKED;
end;


end.
